<resources>
    <string name="app_name">Budget</string>

    <!-- navigation drawer -->
    <string name="record">Record</string>
    <string name="history">History</string>
    <string name="search">Search</string>
    <string name="exit">Exit</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="location">Location</string>
    <string name="quantity">Quantity</string>
    <string name="date">Date</string>
    <string name="description">Description</string>

    <string name="initial_date">Initial date</string>
    <string name="end_date">End date</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="successful">successfully added</string>
<!-- Validations Fields -->
    <string name="vLocation">Please insert Location</string>
    <string name="vQuantity">Please insert Quantity</string>
    <string name="vDescription">Please insert Description</string>
</resources>
