<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cyanococcus.budget.app.SearchInputFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_search">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/textAppearanceListItemSmall"
                android:background="@color/background_material_dark"
                android:textColor="@color/white"
                android:text="@string/initial_date"/>
            <DatePicker
                android:id="@+id/initial_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:attr/textAppearanceListItemSmall"
                android:background="@color/background_material_dark"
                android:textColor="@color/white"
                android:text="@string/end_date"/>
            <DatePicker
                android:id="@+id/end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:layout_gravity="center"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/search"
        android:textColor="@color/white"
        android:background="@drawable/btn_green"/>
</RelativeLayout>
